--- a/themes/nord/wofi.css
+++ b/themes/nord/wofi.css
@@ -1,6 +1,7 @@
-@define-color	selected-text  #88C0D0;
-@define-color	text  #D8DEE9;
-@define-color	base  #2E3440;
+@define-color   selected-text  #88C0D0;
+@define-color   text  #D8DEE9;
+@define-color   base  #2E3440;
+@define-color   border #4c566a;
 
 * {
   font-family: 'CaskaydiaMono Nerd Font', monospace;
@@ -9,23 +10,23 @@
 
 window {
   margin: 0px;
-  padding: 20px;
+  padding: 5px;
   background-color: @base;
-  opacity: 0.95;
+  opacity: 1;
 }
 
 #inner-box {
   margin: 0;
-  padding: 0;
+  padding: 5px;
   border: none;
   background-color: @base;
 }
 
 #outer-box {
   margin: 0;
-  padding: 20px;
+  padding: 5px;
   border: none;
-  background-color: @base;
+  background-color: @border;
 }
 
 #scroll {
@@ -39,7 +40,7 @@ window {
   margin: 0;
   padding: 10px;
   border: none;
-  background-color: @base;
+  background-color: @border;
   color: @text;
 }
 
